@@ -83,6 +83,8 @@ Unreleased changes (1.0-dev)
 
 27. NUTCH-505 - Outlink urls should be validated. (dogacan)
 
+28. NUTCH-510 - IndexMerger delete working dir. (Enis Soztutar via dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
